# Ambient-Listening-FHIR

./: .gitattributes  .gitignore  README.md  ambient-fhir-plan-v3.1.md  ambient-fhir-plan-v3.md  ambient-fhir-plan.md  package-lock.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/dependencies/: auth.py
backend/app/fhir/: allergy_builder.py  bundle_builder.py  constants.py  encounter_builder.py  intake_mapper.py  patient_builder.py  practitioner_mapper.py  questionnaire_builder.py  questionnaire_mapper.py  response_builder.py
backend/app/routers/: auth.py  deferred.py  extract.py  health.py  intake.py  intake_recommendations.py  intakes.py  patients.py  questionnaires.py  reconcile.py  save.py
backend/app/schemas/: common.py  extract.py  fhir_demo.py  intake.py  intake_recommendations.py  patients.py  questionnaires.py  reconcile.py  save.py
backend/app/services/: audit_service.py  extraction_service.py  fhir_client.py  intake_recommendation_service.py  intake_service.py  iris_vector_search_client.py  llm_service.py  patient_context_service.py  patient_service.py  practitioner_service.py  questionnaire_service.py  reconciliation_agent_service.py  reconciliation_graph.py  reconciliation_planner_service.py  reconciliation_semantic_comparator_service.py  reconciliation_service.py  record_fact_mapper.py  record_snapshot_service.py  save_service.py
backend/scripts/: seed_fhir.py
backend/tests/: test_extraction_datetime.py  test_intake_recommendations.py  test_reconciliation_vector_search.py
(+85 files in other folders)
