[project]
name = "ambient-fhir-demo-backend"
version = "0.1.0"
description = "FastAPI backend for the Ambient Listening to FHIR Resources demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
