[project]
name = "ambient-fhir-demo-backend"
version = "0.1.0"
description = "FastAPI backend for the Ambient Listening to FHIR Resources demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "auth0-server-python>=1.0.0b1,<2",
  "flask[async]>=3.1.3",
  "markupsafe>=3.0.3",
  "python-certifi-win32>=1.6.1",
  "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
